@@ -1,3 +1,9 @@
+2009-11-04  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fail instead of exiting when a gradient computation fail.
+	* include/roboptim/core/plugin/cfsqp.hh,
+	* src/roboptim-core-cfsqp-plugin.cc: Here.
+
 2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Synchronize.
